# brawlhalla-bot

./: .gitmodules  README.md  brawlhalla.py  pyproject.toml  runner.py
src/brawlhalla_bot_merrittlj/config/: brawlhalla_config.py
src/brawlhalla_bot_merrittlj/game/: brawlhalla_bot.py  custom_game_bot.py  custom_game_states.py  ffa_bot.py  ffa_states.py  generic_states.py
src/brawlhalla_bot_merrittlj/util/: hotkey_utils.py  logging_utils.py  stoppable_thread.py
v1.0/: brawlhalla.py
v2.0/: brawlhalla.py
v2.0/util/: logging_utils.py  record_proxy.py
